--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 .container {
-    background-color: rgb(47, 0, 255);
-    border: 5px solid black;
-    padding: 15px;
+    background-color: rgb(0, 0, 0);
+    border: 1px solid black;
+    padding: 5px;
     display: grid;
-    gap: 10px;
+    gap: 5px;
     grid-template-areas:
     'header header header header'
     'menu menu menu menu'
@@ -13,6 +13,8 @@
 
 #header {
     grid-area: header;
+    font-size: 15px;
+
 }
 #menu {
     grid-area: menu;
@@ -20,7 +22,7 @@
 
 #context {
     grid-area: context;
-    height: 100vh;
+    height: 50vh;
 }
 
 #footer {
@@ -28,7 +30,7 @@
 }
 
 .container div {
-    background-color: gray;
-    padding: 15px;
-    border: 1px solid black;
+    background-color: rgb(117, 10, 10);
+    padding: 10px;
+    border: 5px solid black;
 }
