--- a/style.css
+++ b/style.css
@@ -12,17 +12,34 @@
 }
 
 #header {
+    background-color:rgb(50, 0, 187);
+    text-align: center;
+    color: rgb(255, 252, 252);
     grid-area: header;
-    font-size: 15px;
+    font-size: 18px;
 
 }
 #menu {
     grid-area: menu;
 }
 
+.lista {
+    text-align: center;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+.linha {
+    display: block;
+    padding: 8px;
+    color: rgb(7, 7, 7);
+    float: left;
+  }
+
 #context {
     grid-area: context;
     height: 50vh;
+    color: black;
 }
 
 #footer {
@@ -30,7 +47,7 @@
 }
 
 .container div {
-    background-color: rgb(117, 10, 10);
+    background-color: rgb(109, 153, 247);
     padding: 10px;
-    border: 5px solid black;
+    border: 1px solid black;
 }
